@@ -1,5 +1,8 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.354 2005/10/13 17:13:35 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.355 2005/10/13 17:15:57 rocket Exp $
+
+  13 Oct 2005; Eric Edgar <rocket@gentoo.org> targets/support/create-iso.sh:
+  Check for the correct arch specific cd building tool
 
   13 Oct 2005; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py:
